--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   train:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
 
@@ -15,12 +16,15 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.8
+          activate-environment: iris_env
+          environment-file: conda.yaml
+          auto-activate-base: false
 
-      - name: Install dependencies
-        run: conda env update -f conda.yaml
+      - name: Install MLflow (just in case)
+        run: conda install -n iris_env -c conda-forge mlflow
 
       - name: Run MLflow project
-        run: mlflow run .
+        run: mlflow run . --env-manager=conda
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
