--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,14 @@ jobs:
         with:
           python-version: 3.10
           auto-activate-base: false
+          activate-environment: iris_env
+          environment-file: conda.yaml
 
-      - name: Create conda environment
+      - name: Install MLflow (backup via pip)
         shell: bash -l {0}
         run: |
-          conda env create -n iris_env -f conda.yaml
           conda activate iris_env
-          pip install mlflow  # Just to be extra safe
+          pip install mlflow
 
       - name: Run MLflow project
         shell: bash -l {0}
