--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,24 +9,31 @@ jobs:
   train:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
           python-version: 3.10
-          auto-activate-base: false
-          activate-environment: iris_env
           environment-file: conda.yaml
+          activate-environment: iris_env
+          auto-activate-base: false
 
-      - name: Install MLflow (backup via pip)
+      - name: Install MLflow via pip (fallback)
         shell: bash -l {0}
         run: |
           conda activate iris_env
           pip install mlflow
 
-      - name: Run MLflow project
+      - name: Run MLflow Project
         shell: bash -l {0}
         run: |
           conda activate iris_env
           mlflow run .
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: mlflow-artifacts
+          path: mlruns/
